--- a/package.json
+++ b/package.json
@@ -3,23 +3,23 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www",
-    "test": "mocha --timeout 10000"
+    "start": "nodemon app.js",
+    "test": "mocha 'test/**/*.js' --recursive --timeout 3000 --exit"
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.0",
-    "express-validator": "^5.3.1",
+    "express-validator": "^6.14.2",
     "http-errors": "~1.6.2",
     "lokijs": "^1.5.6"
   },
   "devDependencies": {
-    "chai": "^4.2.0",
-    "chai-http": "^4.2.1",
-    "mocha": "^6.0.0",
-    "nodemon": "^1.18.10",
+    "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
+    "mocha": "^10.0.0",
+    "nodemon": "^2.0.20",
     "sinon": "^7.2.4"
   }
 }
